# free-grind

./: .gitignore  .prettierignore  .prettierrc  .weblate  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  components.json  design-plan.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.mjs  svelte.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.mjs
.cargo-patches/turso_sdk_kit-0.4.4/: .cargo_vcs_info.json  Cargo.toml
.github/workflows/: deploy-docs.yml  docs-pages.yml  ota-branches.yml  release-main.yml
docs/: package.json  tsconfig.json
docs/.vitepress/: config.ts
docs/content/: index.md
docs/lib/: index.ts
docs/public/: CNAME
scripts/: capture-push-logs.sh  ensure-dev-port.sh  ensure-ios-scheme.sh  publish-ota.mjs
src/: App.tsx  app.html  i18n.ts  index.css  layout.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  hotswap.json
src-tauri/certs/: httptoolkit-ca.pem
src-tauri/hotswap-patched/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  LICENSE-MIT  README.md  build.rs
src-tauri/hotswap-patched/guest-js/: package.json  tsconfig.json
src-tauri/hotswap-patched/guest-js/src/: index.ts
src-tauri/hotswap-patched/permissions/: default.toml
src-tauri/hotswap-patched/permissions/autogenerated/: reference.md
src-tauri/hotswap-patched/permissions/autogenerated/commands/: hotswap_activate.toml  hotswap_apply.toml  hotswap_check.toml  hotswap_configure.toml  hotswap_current_version.toml  hotswap_download.toml  hotswap_get_config.toml  hotswap_notify_ready.toml  hotswap_rollback.toml
src-tauri/hotswap-patched/permissions/schemas/: schema.json
src-tauri/hotswap-patched/src/: assets.rs  commands.rs  error.rs  lib.rs  manifest.rs  policy.rs  resolver.rs  updater.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  storage.rs
src-tauri/src/api/: auth.rs  client.rs  headers.rs  mod.rs  rest.rs  websocket.rs
src/components/: ActiveRouteBridge.tsx  AnalyticsConsentPrompt.tsx  BackToSettings.tsx  ChatRealtimeBridge.tsx  ImageViewer.tsx  NavBar.tsx  ProtectedRoute.tsx  PushNotificationBridge.tsx
src/contexts/: AuthContext.tsx  PreferencesContext.tsx  auth-context.ts  useAuth.ts
src/hooks/: useAnalyticsConsent.ts  useApi.ts  useApiFunctions.ts  useAsyncViewState.ts  useModalClose.ts  usePaginatedList.ts  usePresenceCheck.ts
src/layouts/: ProtectedLayout.tsx  RootLayout.tsx
src/lib/: app-state.svelte.ts  utils.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  hooks.client.ts
src/services/: ageVerification.ts  apiFunctions.ts  apiHelpers.ts  apiTrace.ts  chatContactIndex.ts  chatLog.ts  chatRealtime.ts  chatService.ts  conversationDirectory.ts  desktopNotify.ts  hotswap.ts  interestViewsStore.ts  seenStore.ts  tauriWebSocket.ts
src/types/: age-verification.ts  albums.ts  api-functions.ts  api.ts  auth.ts  (+13 more)
(+215 files in other folders)
