[package]
name = "open-grind"
version = "0.1.0"
description = "FLOSS Grindr client"
authors = ["hloth"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_grind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "10.3.0"
rand = "0.10.1"
chrono = "0.4.44"
tauri-plugin-fs = "2"
keyring = "4.0.0-rc.3"
keyring-core = "0.7.2"
rmp-serde = "1.3.1"
serde_bytes = "0.11"
tauri-plugin-geolocation = "2"
tauri-plugin-os = "2"
